# ai-agents-blog

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
app/about/: page.tsx
app/book/: page.tsx
app/rss.xml/: route.ts
components/: BookingChat.tsx  Header.tsx  Markdown.tsx  MermaidDiagram.tsx  PostsBrowser.tsx
lib/: posts.ts  site.ts
mcp-server/: requirements.txt  server.py
playgrounds/: README.md
playgrounds/langgraph-lab/: README.md  pyproject.toml
playgrounds/langgraph-lab/notes/: blog-post-outline.md  learning-log.md
playgrounds/langgraph-lab/scripts/: 00_hello_graph.py  01_memory_graph.py  02_langchain_prompt_chain.py  03_conditional_graph.py
posts/: kafka-cdc-basics.md  mcp-agent-architecture.md  messaging-systems-for-trading-uis.md  what-kiro-is-and-how-it-compares.md  why-ai-agents-need-skills.md  why-health-plus-tech-might-be-the-new-computer-science.md
posts/agents/: 10-principles-for-agent-facing-apis.md  building-an-internal-devex-mcp-platform.md  ci-failure-triage-background-agent-python.md  ci-failure-triage-background-agent.md  codex-vs-claude-code-token-limits.md  how-to-succeed-as-a-devex-ai-engineer.md  i-replaced-my-n8n-workflows-and-langchain-scripts-with-a-markdown-file.md  mcp-agent-architecture.md  skills-are-the-npm-of-ai-agents.md  why-ai-agents-need-skills.md
posts/ai-engineering/: llm-determinism-temperature-explained.md
posts/data-engineering/: spark-for-full-stack-engineers.md
posts/health-tech/: a-concrete-health-tech-curriculum-roadmap.md  (+1 more)
(+5 files in other folders)
