[project]
name = "langgraph-lab"
version = "0.1.0"
description = "A scratchpad for learning LangGraph and LangChain concepts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph",
  "langchain",
  "langchain-openai",
  "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
